deployment/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  ports:
  - port: 7000
    name: http
  selector:
    app: product-service

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  labels:
    app: product-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
      version: v1
  template:
    metadata:
      labels:
        app: product-service
        version: v1
      name: product-service
    spec:
      containers:
        - name: product-service
          image: maccommerce/product-service:latest
          ports:
            - containerPort: 7000
