deployment/postgres.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-db
  labels:
    app: product-service-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service-db
  template:
    metadata:
      labels:
        app: product-service-db
      name: product-service-db
    spec:
      containers:
        - name: product-service-db
          image: postgres:9.6
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: product-service-db-volume
      volumes:
        - name: product-service-db-volume
          persistentVolumeClaim:
            claimName: product-service-db-pv-claim

---

apiVersion: v1
kind: Service
metadata:
  name: product-service-db
  labels:
    app: product-service-db
spec:
  type: NodePort
  ports:
  - port: 5432
    protocol: TCP
  selector:
    app: product-service-db
